sort.baseball.SelectBaseball.scala.error
Erreur de compilation :
SelectBaseball:43: error: '=' expected but '(' found.
def index2pos(index:Int):Array[Int](2) = {
                                   ^SelectBaseball:181: error: illegal start of simple expression
}
^